--- a/extensions/odoo_theme/layout_templates/footer.html
+++ b/extensions/odoo_theme/layout_templates/footer.html
@@ -6,9 +6,9 @@
             <!-- <a href="https://leansoft.vn/forum/help-1" target="_blank" class="btn btn-outline-secondary mb-2">{{ _("Ask the Odoo Community") }}</a> -->
         </div>
     </div>
-    <div class="col-12 col-lg-2 mt-5 mt-lg-0 text-center">
+    <!-- <div class="col-12 col-lg-2 mt-5 mt-lg-0 text-center">
         <a class="o_logo" href="https://leansoft.vn">
             <img src="{{ pathto('_static/img/logos/odoo_logo.svg', 1) }}" height="20" alt="Leansoft"/>
         </a>
-    </div>
+    </div> -->
 </div>
